app/assets/stylesheets/custom.css.scss
@import "bootstrap";


/* universal css */

html {
  overflow-y: scroll;
}

body {
  padding-top: 60px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* universal typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.7em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #999;
}

h3 {
  margin-top:30px;
  font-size: 1.7em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header styling */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

/* footer styling */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #999;
}

footer a {
  color: #555;
}  

footer a:hover { 
  color: #222;
}

footer small {
  float: left;
}

footer ul {
  float: right;
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 10px;
}

/* NAV BAR - JQUERY INSERTION HERE - STYLING */

.nav-bar .ui-btn .ui-btn-inner { padding-top: 40px !important; } 
.nav-bar .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
#following .ui-icon { background:  url(/icons/112-group.png) 50% 50% no-repeat; background-size: 26px 22px; }
#explore .ui-icon { background: url(/icons/06-magnify.png) 50% 50% no-repeat; background-size: 24px 26px; }
#upload .ui-icon { background:  url(/icons/86-camera.png) 50% 50% no-repeat; background-size: 24px 20px;  }
#notifications .ui-icon { background:  url(/icons/124-bullhorn.png) 50% 50% no-repeat;  background-size: 24px 24px; }
#my-closet .ui-icon { background:  url(/icons/118-coat-hanger.png) 50% 50% no-repeat;  background-size: 22px 24px; }
    

/* mixins, variables, etc. */

/*$grayMediumLight: #eaeaea;


@mixin box_sizing {
  -moz-box-sizing: border-box; 
  -webkit-box-sizing: border-box; 
  box-sizing: border-box;
}

*/

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
 /* @include box_sizing;*/
}


.gravatar {
  float: left;
  margin-right: 10px;
}

/* forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  padding: 10px;
  height: auto !important;
  margin-bottom: 15px;
 /* @include box_sizing;*/
}

#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
 }

 /* users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-top: 1px gray;
    &:last-child {
      border-bottom: 1px gray;
    }
  }
}

/* microposts/photo posts now */

.microposts {
  list-style: none;
  margin: 10px 0 0 0;

  li {
    padding: 10px 0;
    border-top: 1px solid #e8e8e8;
  }
}
.content {
  display: block;
}
.timestamp {
  color: gray;
}
.gravatar {
  float: left;
  margin-right: 10px;
}
aside {
  textarea {
    height: 100px;
    margin-bottom: 5px;
  }
}

.stats {
  overflow: auto;
  a {
    color: black;
    float: left;
    padding: 0 10px;
    border-left: 1px gray;
    color: gray;
    &:first-child {
      padding-left: 0;
      border: 0;
    }
    &:hover {
      text-decoration: none;
      color: black;
    }
  }
  strong {
    display: block;
  }
}

.user_avatars {
  overflow: auto;
  margin-top: 10px;
  .gravatar {
    margin: 1px 1px;
  }
}

/* upload form */

#hiddenPreview {
  display:none;
}

